tarea_1/xml_parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Document
Rule 1     Document -> Prolog HealthTopics
Rule 2     Prolog -> XmlDeclStartTag XmlDeclAttributes XmlDeclEndTag DocTypeDeclStartTag DocTypeDeclName DocTypeDeclExternalId StartTagClose
Rule 3     XmlDeclAttributes -> VersionKey String EncodingKey String
Rule 4     HealthTopics -> HealthTopicsStartTagOpen HealthTopicsAttributes StartTagClose HealthTopicsContent HealthTopicsEndTag
Rule 5     HealthTopicsContent -> HealthTopicList
Rule 6     HealthTopicsAttributes -> TotalKey Integer DateGeneratedKey Timestamp
Rule 7     HealthTopicList -> HealthTopic HealthTopicList
Rule 8     HealthTopicList -> HealthTopic
Rule 9     HealthTopic -> HealthTopicStartTagOpen HealthTopicAttributes StartTagClose HealthTopicContent HealthTopicEndTag
Rule 10    HealthTopicAttributes -> MetaDescKey String TitleKey String UrlKey Uri IdKey Integer LanguageKey Language DateCreatedKey Date
Rule 11    HealthTopicContent -> AlsoCalledList FullSummary GroupList LanguageMappedTopicOpt MeshHeadingList OtherLanguageList PrimaryInstituteOpt RelatedTopicList SeeReferenceList SiteList
Rule 12    AlsoCalledList -> AlsoCalled AlsoCalledList
Rule 13    AlsoCalledList -> empty
Rule 14    GroupList -> Group GroupList
Rule 15    GroupList -> empty
Rule 16    LanguageMappedTopicOpt -> LanguageMappedTopic
Rule 17    LanguageMappedTopicOpt -> empty
Rule 18    MeshHeadingList -> MeshHeading MeshHeadingList
Rule 19    MeshHeadingList -> empty
Rule 20    OtherLanguageList -> OtherLanguage OtherLanguageList
Rule 21    OtherLanguageList -> empty
Rule 22    PrimaryInstituteOpt -> PrimaryInstitute
Rule 23    PrimaryInstituteOpt -> empty
Rule 24    RelatedTopicList -> RelatedTopic RelatedTopicList
Rule 25    RelatedTopicList -> empty
Rule 26    SeeReferenceList -> SeeReference SeeReferenceList
Rule 27    SeeReferenceList -> empty
Rule 28    SiteList -> Site SiteList
Rule 29    SiteList -> empty
Rule 30    FullSummary -> FullSummaryStartTagOpen StartTagClose Text FullSummaryEndTag
Rule 31    Group -> GroupStartTagOpen GroupAttributes StartTagClose Text GroupEndTag
Rule 32    GroupAttributes -> UrlKey Uri IdKey Integer
Rule 33    LanguageMappedTopic -> LanguageMappedTopicStartTagOpen LanguageMappedTopicAttributes StartTagClose Text LanguageMappedTopicEndTag
Rule 34    LanguageMappedTopicAttributes -> UrlKey Uri IdKey Integer LanguageKey Language
Rule 35    MeshHeading -> MeshHeadingStartTagOpen StartTagClose MeshHeadingContent MeshHeadingEndTag
Rule 36    MeshHeadingContent -> Descriptor QualifierListOpt
Rule 37    QualifierListOpt -> QualifierList
Rule 38    QualifierListOpt -> empty
Rule 39    QualifierList -> Qualifier QualifierList
Rule 40    QualifierList -> empty
Rule 41    OtherLanguage -> OtherLanguageStartTagOpen OtherLanguageAttributes StartTagClose Text OtherLanguageEndTag
Rule 42    OtherLanguageAttributes -> VernacularNameKey String UrlKey Uri
Rule 43    PrimaryInstitute -> PrimaryInstituteStartTagOpen PrimaryInstituteAttributes StartTagClose Text PrimaryInstituteEndTag
Rule 44    PrimaryInstituteAttributes -> UrlKey Uri
Rule 45    RelatedTopic -> RelatedTopicStartTagOpen RelatedTopicAttributes StartTagClose Text RelatedTopicEndTag
Rule 46    RelatedTopicAttributes -> UrlKey Uri IdKey Integer
Rule 47    SeeReference -> SeeReferenceStartTagOpen StartTagClose Text SeeReferenceEndTag
Rule 48    Site -> SiteStartTagOpen SiteAttributes StartTagClose SiteContent SiteEndTag
Rule 49    SiteContent -> InformationCategoryList OrganizationList StandardDescriptionList
Rule 50    InformationCategoryList -> InformationCategory InformationCategoryList
Rule 51    InformationCategoryList -> InformationCategory
Rule 52    OrganizationList -> Organization OrganizationList
Rule 53    OrganizationList -> empty
Rule 54    StandardDescriptionList -> StandardDescription StandardDescriptionList
Rule 55    StandardDescriptionList -> empty
Rule 56    SiteAttributes -> TitleKey String UrlKey Uri LanguageMappedUrlKey Uri
Rule 57    SiteAttributes -> TitleKey String UrlKey Uri
Rule 58    AlsoCalled -> AlsoCalledStartTagOpen StartTagClose Text AlsoCalledEndTag
Rule 59    Descriptor -> DescriptorStartTagOpen DescriptorAttributes StartTagClose Text DescriptorEndTag
Rule 60    DescriptorAttributes -> IdKey String
Rule 61    Qualifier -> QualifierStartTagOpen QualifierAttributes StartTagClose Text QualifierEndTag
Rule 62    QualifierAttributes -> IdKey String
Rule 63    InformationCategory -> InformationCategoryStartTagOpen StartTagClose Text InformationCategoryEndTag
Rule 64    Organization -> OrganizationStartTagOpen StartTagClose Text OrganizationEndTag
Rule 65    StandardDescription -> StandardDescriptionStartTagOpen StartTagClose Text StandardDescriptionEndTag
Rule 66    Text -> Text Line
Rule 67    Text -> Text String
Rule 68    Text -> Line
Rule 69    empty -> <empty>

Terminals, with rules where they appear

AlsoCalledEndTag     : 58
AlsoCalledStartTagOpen : 58
Date                 : 10
DateCreatedKey       : 10
DateGeneratedKey     : 6
DescriptorEndTag     : 59
DescriptorStartTagOpen : 59
DocTypeDeclExternalId : 2
DocTypeDeclName      : 2
DocTypeDeclStartTag  : 2
EncodingKey          : 3
FullSummaryEndTag    : 30
FullSummaryStartTagOpen : 30
GroupEndTag          : 31
GroupStartTagOpen    : 31
HealthTopicEndTag    : 9
HealthTopicStartTagOpen : 9
HealthTopicsEndTag   : 4
HealthTopicsStartTagOpen : 4
IdKey                : 10 32 34 46 60 62
InformationCategoryEndTag : 63
InformationCategoryStartTagOpen : 63
Integer              : 6 10 32 34 46
Language             : 10 34
LanguageKey          : 10 34
LanguageMappedTopicEndTag : 33
LanguageMappedTopicStartTagOpen : 33
LanguageMappedUrlKey : 56
Line                 : 66 68
MeshHeadingEndTag    : 35
MeshHeadingStartTagOpen : 35
MetaDescKey          : 10
OrganizationEndTag   : 64
OrganizationStartTagOpen : 64
OtherLanguageEndTag  : 41
OtherLanguageStartTagOpen : 41
PrimaryInstituteEndTag : 43
PrimaryInstituteStartTagOpen : 43
QualifierEndTag      : 61
QualifierStartTagOpen : 61
RelatedTopicEndTag   : 45
RelatedTopicStartTagOpen : 45
SeeReferenceEndTag   : 47
SeeReferenceStartTagOpen : 47
SiteEndTag           : 48
SiteStartTagOpen     : 48
StandardDescriptionEndTag : 65
StandardDescriptionStartTagOpen : 65
StartTagClose        : 2 4 9 30 31 33 35 41 43 45 47 48 58 59 61 63 64 65
String               : 3 3 10 10 42 56 57 60 62 67
Timestamp            : 6
TitleKey             : 10 56 57
TotalKey             : 6
Uri                  : 10 32 34 42 44 46 56 56 57
UrlKey               : 10 32 34 42 44 46 56 57
VernacularNameKey    : 42
VersionKey           : 3
XmlDeclEndTag        : 2
XmlDeclStartTag      : 2
error                : 

Nonterminals, with rules where they appear

AlsoCalled           : 12
AlsoCalledList       : 11 12
Descriptor           : 36
DescriptorAttributes : 59
Document             : 0
FullSummary          : 11
Group                : 14
GroupAttributes      : 31
GroupList            : 11 14
HealthTopic          : 7 8
HealthTopicAttributes : 9
HealthTopicContent   : 9
HealthTopicList      : 5 7
HealthTopics         : 1
HealthTopicsAttributes : 4
HealthTopicsContent  : 4
InformationCategory  : 50 51
InformationCategoryList : 49 50
LanguageMappedTopic  : 16
LanguageMappedTopicAttributes : 33
LanguageMappedTopicOpt : 11
MeshHeading          : 18
MeshHeadingContent   : 35
MeshHeadingList      : 11 18
Organization         : 52
OrganizationList     : 49 52
OtherLanguage        : 20
OtherLanguageAttributes : 41
OtherLanguageList    : 11 20
PrimaryInstitute     : 22
PrimaryInstituteAttributes : 43
PrimaryInstituteOpt  : 11
Prolog               : 1
Qualifier            : 39
QualifierAttributes  : 61
QualifierList        : 37 39
QualifierListOpt     : 36
RelatedTopic         : 24
RelatedTopicAttributes : 45
RelatedTopicList     : 11 24
SeeReference         : 26
SeeReferenceList     : 11 26
Site                 : 28
SiteAttributes       : 48
SiteContent          : 48
SiteList             : 11 28
StandardDescription  : 54
StandardDescriptionList : 49 54
Text                 : 30 31 33 41 43 45 47 58 59 61 63 64 65 66 67
XmlDeclAttributes    : 2
empty                : 13 15 17 19 21 23 25 27 29 38 40 53 55

Parsing method: LALR

state 0

    (0) S' -> . Document
    (1) Document -> . Prolog HealthTopics
    (2) Prolog -> . XmlDeclStartTag XmlDeclAttributes XmlDeclEndTag DocTypeDeclStartTag DocTypeDeclName DocTypeDeclExternalId StartTagClose

    XmlDeclStartTag shift and go to state 3

    Document                       shift and go to state 1
    Prolog                         shift and go to state 2

state 1

    (0) S' -> Document .



state 2

    (1) Document -> Prolog . HealthTopics
    (4) HealthTopics -> . HealthTopicsStartTagOpen HealthTopicsAttributes StartTagClose HealthTopicsContent HealthTopicsEndTag

    HealthTopicsStartTagOpen shift and go to state 5

    HealthTopics                   shift and go to state 4

state 3

    (2) Prolog -> XmlDeclStartTag . XmlDeclAttributes XmlDeclEndTag DocTypeDeclStartTag DocTypeDeclName DocTypeDeclExternalId StartTagClose
    (3) XmlDeclAttributes -> . VersionKey String EncodingKey String

    VersionKey      shift and go to state 7

    XmlDeclAttributes              shift and go to state 6

state 4

    (1) Document -> Prolog HealthTopics .

    $end            reduce using rule 1 (Document -> Prolog HealthTopics .)


state 5

    (4) HealthTopics -> HealthTopicsStartTagOpen . HealthTopicsAttributes StartTagClose HealthTopicsContent HealthTopicsEndTag
    (6) HealthTopicsAttributes -> . TotalKey Integer DateGeneratedKey Timestamp

    TotalKey        shift and go to state 9

    HealthTopicsAttributes         shift and go to state 8

state 6

    (2) Prolog -> XmlDeclStartTag XmlDeclAttributes . XmlDeclEndTag DocTypeDeclStartTag DocTypeDeclName DocTypeDeclExternalId StartTagClose

    XmlDeclEndTag   shift and go to state 10


state 7

    (3) XmlDeclAttributes -> VersionKey . String EncodingKey String

    String          shift and go to state 11


state 8

    (4) HealthTopics -> HealthTopicsStartTagOpen HealthTopicsAttributes . StartTagClose HealthTopicsContent HealthTopicsEndTag

    StartTagClose   shift and go to state 12


state 9

    (6) HealthTopicsAttributes -> TotalKey . Integer DateGeneratedKey Timestamp

    Integer         shift and go to state 13


state 10

    (2) Prolog -> XmlDeclStartTag XmlDeclAttributes XmlDeclEndTag . DocTypeDeclStartTag DocTypeDeclName DocTypeDeclExternalId StartTagClose

    DocTypeDeclStartTag shift and go to state 14


state 11

    (3) XmlDeclAttributes -> VersionKey String . EncodingKey String

    EncodingKey     shift and go to state 15


state 12

    (4) HealthTopics -> HealthTopicsStartTagOpen HealthTopicsAttributes StartTagClose . HealthTopicsContent HealthTopicsEndTag
    (5) HealthTopicsContent -> . HealthTopicList
    (7) HealthTopicList -> . HealthTopic HealthTopicList
    (8) HealthTopicList -> . HealthTopic
    (9) HealthTopic -> . HealthTopicStartTagOpen HealthTopicAttributes StartTagClose HealthTopicContent HealthTopicEndTag

    HealthTopicStartTagOpen shift and go to state 19

    HealthTopicsContent            shift and go to state 16
    HealthTopicList                shift and go to state 17
    HealthTopic                    shift and go to state 18

state 13

    (6) HealthTopicsAttributes -> TotalKey Integer . DateGeneratedKey Timestamp

    DateGeneratedKey shift and go to state 20


state 14

    (2) Prolog -> XmlDeclStartTag XmlDeclAttributes XmlDeclEndTag DocTypeDeclStartTag . DocTypeDeclName DocTypeDeclExternalId StartTagClose

    DocTypeDeclName shift and go to state 21


state 15

    (3) XmlDeclAttributes -> VersionKey String EncodingKey . String

    String          shift and go to state 22


state 16

    (4) HealthTopics -> HealthTopicsStartTagOpen HealthTopicsAttributes StartTagClose HealthTopicsContent . HealthTopicsEndTag

    HealthTopicsEndTag shift and go to state 23


state 17

    (5) HealthTopicsContent -> HealthTopicList .

    HealthTopicsEndTag reduce using rule 5 (HealthTopicsContent -> HealthTopicList .)


state 18

    (7) HealthTopicList -> HealthTopic . HealthTopicList
    (8) HealthTopicList -> HealthTopic .
    (7) HealthTopicList -> . HealthTopic HealthTopicList
    (8) HealthTopicList -> . HealthTopic
    (9) HealthTopic -> . HealthTopicStartTagOpen HealthTopicAttributes StartTagClose HealthTopicContent HealthTopicEndTag

    HealthTopicsEndTag reduce using rule 8 (HealthTopicList -> HealthTopic .)
    HealthTopicStartTagOpen shift and go to state 19

    HealthTopic                    shift and go to state 18
    HealthTopicList                shift and go to state 24

state 19

    (9) HealthTopic -> HealthTopicStartTagOpen . HealthTopicAttributes StartTagClose HealthTopicContent HealthTopicEndTag
    (10) HealthTopicAttributes -> . MetaDescKey String TitleKey String UrlKey Uri IdKey Integer LanguageKey Language DateCreatedKey Date

    MetaDescKey     shift and go to state 26

    HealthTopicAttributes          shift and go to state 25

state 20

    (6) HealthTopicsAttributes -> TotalKey Integer DateGeneratedKey . Timestamp

    Timestamp       shift and go to state 27


state 21

    (2) Prolog -> XmlDeclStartTag XmlDeclAttributes XmlDeclEndTag DocTypeDeclStartTag DocTypeDeclName . DocTypeDeclExternalId StartTagClose

    DocTypeDeclExternalId shift and go to state 28


state 22

    (3) XmlDeclAttributes -> VersionKey String EncodingKey String .

    XmlDeclEndTag   reduce using rule 3 (XmlDeclAttributes -> VersionKey String EncodingKey String .)


state 23

    (4) HealthTopics -> HealthTopicsStartTagOpen HealthTopicsAttributes StartTagClose HealthTopicsContent HealthTopicsEndTag .

    $end            reduce using rule 4 (HealthTopics -> HealthTopicsStartTagOpen HealthTopicsAttributes StartTagClose HealthTopicsContent HealthTopicsEndTag .)


state 24

    (7) HealthTopicList -> HealthTopic HealthTopicList .

    HealthTopicsEndTag reduce using rule 7 (HealthTopicList -> HealthTopic HealthTopicList .)


state 25

    (9) HealthTopic -> HealthTopicStartTagOpen HealthTopicAttributes . StartTagClose HealthTopicContent HealthTopicEndTag

    StartTagClose   shift and go to state 29


state 26

    (10) HealthTopicAttributes -> MetaDescKey . String TitleKey String UrlKey Uri IdKey Integer LanguageKey Language DateCreatedKey Date

    String          shift and go to state 30


state 27

    (6) HealthTopicsAttributes -> TotalKey Integer DateGeneratedKey Timestamp .

    StartTagClose   reduce using rule 6 (HealthTopicsAttributes -> TotalKey Integer DateGeneratedKey Timestamp .)


state 28

    (2) Prolog -> XmlDeclStartTag XmlDeclAttributes XmlDeclEndTag DocTypeDeclStartTag DocTypeDeclName DocTypeDeclExternalId . StartTagClose

    StartTagClose   shift and go to state 31


state 29

    (9) HealthTopic -> HealthTopicStartTagOpen HealthTopicAttributes StartTagClose . HealthTopicContent HealthTopicEndTag
    (11) HealthTopicContent -> . AlsoCalledList FullSummary GroupList LanguageMappedTopicOpt MeshHeadingList OtherLanguageList PrimaryInstituteOpt RelatedTopicList SeeReferenceList SiteList
    (12) AlsoCalledList -> . AlsoCalled AlsoCalledList
    (13) AlsoCalledList -> . empty
    (58) AlsoCalled -> . AlsoCalledStartTagOpen StartTagClose Text AlsoCalledEndTag
    (69) empty -> .

    AlsoCalledStartTagOpen shift and go to state 36
    FullSummaryStartTagOpen reduce using rule 69 (empty -> .)

    HealthTopicContent             shift and go to state 32
    AlsoCalledList                 shift and go to state 33
    AlsoCalled                     shift and go to state 34
    empty                          shift and go to state 35

state 30

    (10) HealthTopicAttributes -> MetaDescKey String . TitleKey String UrlKey Uri IdKey Integer LanguageKey Language DateCreatedKey Date

    TitleKey        shift and go to state 37


state 31

    (2) Prolog -> XmlDeclStartTag XmlDeclAttributes XmlDeclEndTag DocTypeDeclStartTag DocTypeDeclName DocTypeDeclExternalId StartTagClose .

    HealthTopicsStartTagOpen reduce using rule 2 (Prolog -> XmlDeclStartTag XmlDeclAttributes XmlDeclEndTag DocTypeDeclStartTag DocTypeDeclName DocTypeDeclExternalId StartTagClose .)


state 32

    (9) HealthTopic -> HealthTopicStartTagOpen HealthTopicAttributes StartTagClose HealthTopicContent . HealthTopicEndTag

    HealthTopicEndTag shift and go to state 38


state 33

    (11) HealthTopicContent -> AlsoCalledList . FullSummary GroupList LanguageMappedTopicOpt MeshHeadingList OtherLanguageList PrimaryInstituteOpt RelatedTopicList SeeReferenceList SiteList
    (30) FullSummary -> . FullSummaryStartTagOpen StartTagClose Text FullSummaryEndTag

    FullSummaryStartTagOpen shift and go to state 40

    FullSummary                    shift and go to state 39

state 34

    (12) AlsoCalledList -> AlsoCalled . AlsoCalledList
    (12) AlsoCalledList -> . AlsoCalled AlsoCalledList
    (13) AlsoCalledList -> . empty
    (58) AlsoCalled -> . AlsoCalledStartTagOpen StartTagClose Text AlsoCalledEndTag
    (69) empty -> .

    AlsoCalledStartTagOpen shift and go to state 36
    FullSummaryStartTagOpen reduce using rule 69 (empty -> .)
